--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -48,4 +48,7 @@
         </md-card-content>
       </md-card>
   </div>
+  <div [hidden]="dish">
+    <md-spinner></md-spinner><h4>Loading... Please Wait</h4>
+</div>
 </div>
