--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -92,8 +92,12 @@
          </form>
       </div>
   </div>  
-  <div [hidden]="dish">
-    <md-spinner></md-spinner><h4>Loading... Please Wait</h4>
+  <div [hidden]="dishes || errMess">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
   </div>
      
 </div>
