--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,9 +18,13 @@
     </p>
   </md-card-content>
 </md-card>
-<div [hidden]="dish">
-    <md-spinner></md-spinner><h4>Loading... Please Wait</h4>
-</div>
+<div [hidden]="dish || dishErrMess">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="dishErrMess">
+    <h2>Error</h2>
+    <h4>{{dishErrMess}}</h4>
+  </div>
 
 <md-card *ngIf="promotion" fxFlex>
   <md-card-header>
@@ -35,9 +39,13 @@
     </p>
   </md-card-content>
 </md-card>
-<div [hidden]="promotion">
-    <md-spinner></md-spinner><h4>Loading... Please Wait</h4>
-</div>
+<div [hidden]="promotion || promotionErrMess">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="promotionErrMess">
+    <h2>Error</h2>
+    <h4>{{promotionErrMess}}</h4>
+  </div>
 
 <md-card *ngIf="leader" fxFlex>
   <md-card-header>
@@ -55,8 +63,12 @@
     </p>
   </md-card-content>
 </md-card>
-<div [hidden]="leader">
-    <md-spinner></md-spinner><h4>Loading... Please Wait</h4>
-</div>
+<div [hidden]="leader || leaderErrMess">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="leaderErrMess">
+    <h2>Error</h2>
+    <h4>{{leaderErrMess}}</h4>
+  </div>
 
 </div>
