--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -92,7 +92,7 @@
          </form>
       </div>
   </div>  
-  <div [hidden]="dishes || errMess">
+  <div [hidden]="dish || errMess">
     <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
   </div>
   <div *ngIf="errMess">
