--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,11 +54,11 @@
       </div>
 
 
-      <div fxFlex *ngIf="leaders">
+      <div fxFlex *ngIf="leaders" [@expand]>
           <h2>Corporate Leadership</h2>
           <md-list>      
              <md-list-item *ngFor="let leader of leaders">       
-                <img  md-list-avatar src={{leader.image}} alt={{leader.name}}>                      
+                <img  md-list-avatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>                      
                  <p md-line>
                    {{leader.name}}
                  </p>             
